--- a/commands/Invoke-VPASAccountPasswordAction.html
+++ b/commands/Invoke-VPASAccountPasswordAction.html
@@ -459,9 +459,9 @@
 											<br>
 											<h1 style="text-align: left;">Outputs:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$true if action was marked successfully</b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>GeneratedPassword if action is GENERATE PASSWORD</b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$false if failed</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>$true if action was marked successfully<br>GeneratedPassword if action is GENERATE PASSWORD<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>
+$false if failed</b></p></td></tr>
 											</table>
 											</div>
 											
