--- a/commands/New-VPASPSMSession.html
+++ b/commands/New-VPASPSMSession.html
@@ -462,8 +462,9 @@
 											<br>
 											<h1 style="text-align: left;">Outputs:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>RDPFile if successful</b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$false if failed</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>If successful:<br>An RDP file containing the following example<br>     full address:s:1.2.3.4<br>     server port:i:3389<br>     username:s:localhost\PSM@1df467e5-de84-424f-8527-d88a423577fc<br>     alternate shell:s:PSM@1df467e5-de84-424f-8527-d88a423577fc<br>     desktopwidth:i:768<br>     desktopheight:i:1024<br>     screen mode id:i:2<br>     redirectdrives:i:0<br>     drivestoredirect:s:<br>     redirectsmartcards:i:0<br>     EnableCredSspSupport:i:0<br>     redirectcomports:i:0<br>     remoteapplicationmode:i:0<br>     use multimon:i:0<br>     span monitors:i:0<br>     smart sizing:i:1<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>
+$false if failed</b></p></td></tr>
 											</table>
 											</div>
 											
