--- a/commands/Import-VPASPlatform.html
+++ b/commands/Import-VPASPlatform.html
@@ -453,8 +453,9 @@
 											<br>
 											<h1 style="text-align: left;">Outputs:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>JSON Object (ImportPlatform) if successful</b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$false if failed</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>If successful:<br>{<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     "PlatformID":  "ExamplePlatform"<br>}<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>
+$false if failed</b></p></td></tr>
 											</table>
 											</div>
 											
