--- a/commands/Confirm-VPASBulkFile.html
+++ b/commands/Confirm-VPASBulkFile.html
@@ -424,7 +424,8 @@
 											<br>
 											<h1 style="text-align: left;">Syntax:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>Confirm-VPASBulkFile [-BulkOperation] &lt;String&gt; [-CSVFile] &lt;String&gt; [[-ISPSS]] [[-HideOutput]] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Confirm-VPASBulkFile -BulkOperation &lt;String&gt; -CSVFile &lt;String&gt; [-ISPSS] [-HideOutput] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Confirm-VPASBulkFile -InputParameters &lt;Hashtable&gt; [&lt;CommonParameters&gt;]</b></p></td></tr>
 											</table>
 											</div>
 											
@@ -433,10 +434,11 @@
 											<br>
 											<h1 style="text-align: left;">Parameters:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-BulkOperation &lt;String&gt;<br>Which bulk operation the CSVFile should be tested against<br>Possible values: BulkSafeCreation, BulkAccountCreation, BulkSafeMembers<br><br>Required: true<br>Position: 1<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-CSVFile &lt;String&gt;<br>Location of the CSV file containing the target information<br><br>Required: true<br>Position: 2<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ISPSS [&lt;SwitchParameter&gt;]<br>For saas environments<br>The APIs for adding safe members introduced a new parameter for saas environments. Enable this flag for saas environments<br><br>Required: false<br>Position: 3<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-HideOutput [&lt;SwitchParameter&gt;]<br>Suppress any output to the console<br><br>Required: false<br>Position: 4<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-BulkOperation &lt;String&gt;<br>Which bulk operation the CSVFile should be tested against<br>Possible values: BulkSafeCreation, BulkAccountCreation, BulkSafeMembers<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-CSVFile &lt;String&gt;<br>Location of the CSV file containing the target information<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ISPSS [&lt;SwitchParameter&gt;]<br>For saas environments<br>The APIs for adding safe members introduced a new parameter for saas environments. Enable this flag for saas environments<br><br>Required: false<br>Position: named<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-HideOutput [&lt;SwitchParameter&gt;]<br>Suppress any output to the console<br><br>Required: false<br>Position: named<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-InputParameters &lt;Hashtable&gt;<br>HashTable of values containing the parameters required to make the API call<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>&lt;CommonParameters&gt;<br>This cmdlet supports the common parameters: Verbose, Debug<br>ErrorAction, ErrorVariable, WarningAction, WarningVariable<br>OutBuffer, PipelineVariable, and OutVariable. For more information, see<br>about_CommonParameters (https:/go.microsoft.com/fwlink/?LinkID=113216)<br></b></p></td></tr>
 											</table>
 											</div>
@@ -447,6 +449,7 @@
 											<h1 style="text-align: left;">Examples:</h1>
 											<table style="background: #2e3141">
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>$CSVFileValidate = Confirm-VPASBulkFile -BulkOperation {BULKOPERATION VALUE} -CSVFile {CSVFILE LOCATION}</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>$InputParameters = @{<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;BulkOperation = "BulkSafeCreation"|"BulkAccountCreation"|"BulkSafeMembers"<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     CSVFile = "C:\Temp\test.csv"<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     ISPSS = $true|$false<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HideOutput = $true|$false<br>}<br>$CSVFileValidate = Confirm-VPASBulkFile -InputParameters $InputParameters</b></p></td></tr>
 											</table>
 											</div>
 											
