--- a/commands/Invoke-VPASCredentialProvider.html
+++ b/commands/Invoke-VPASCredentialProvider.html
@@ -424,7 +424,7 @@
 											<br>
 											<h1 style="text-align: left;">Syntax:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>Invoke-VPASCredentialProvider [-ApplicationID] &lt;String&gt; [-Safe] &lt;String&gt; [-ObjectName] &lt;String&gt; [[-Folder] &lt;String&gt;] [-SDKLocation] &lt;String&gt; [[-Reason] &lt;String&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Invoke-VPASCredentialProvider -ApplicationID &lt;String&gt; -Safe &lt;String&gt; -ObjectName &lt;String&gt; [-Folder &lt;String&gt;] -SDKLocation &lt;String&gt; [-Reason &lt;String&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
 											</table>
 											</div>
 											
@@ -433,12 +433,12 @@
 											<br>
 											<h1 style="text-align: left;">Parameters:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ApplicationID &lt;String&gt;<br>The application ID that has access to the safe that will retrieve the account information<br><br>Required: true<br>Position: 1<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Safe &lt;String&gt;<br>Safe that the target account is located in<br><br>Required: true<br>Position: 2<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ObjectName &lt;String&gt;<br>Unique identifier of the target account<br><br>Required: true<br>Position: 3<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Folder &lt;String&gt;<br>A directory within a safe that the target account is located in<br>Default value: root<br><br>Required: false<br>Position: 4<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-SDKLocation &lt;String&gt;<br>Location or filepath to the CLIPasswordSDK that will be utilized to make the call<br>Default value: 'C:\Program Files (x86)\CyberArk\ApplicationPasswordSdk\CLIPasswordSDK.exe'<br><br>Required: true<br>Position: 5<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Reason &lt;String&gt;<br>Purpose for pulling the account, for auditing and master policy restriction<br><br>Required: false<br>Position: 6<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ApplicationID &lt;String&gt;<br>The application ID that has access to the safe that will retrieve the account information<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Safe &lt;String&gt;<br>Safe that the target account is located in<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-ObjectName &lt;String&gt;<br>Unique identifier of the target account<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Folder &lt;String&gt;<br>A directory within a safe that the target account is located in<br>Default value: root<br><br>Required: false<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-SDKLocation &lt;String&gt;<br>Location or filepath to the CLIPasswordSDK that will be utilized to make the call<br>Default value: 'C:\Program Files (x86)\CyberArk\ApplicationPasswordSdk\CLIPasswordSDK.exe'<br><br>Required: true<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-Reason &lt;String&gt;<br>Purpose for pulling the account, for auditing and master policy restriction<br><br>Required: false<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>&lt;CommonParameters&gt;<br>This cmdlet supports the common parameters: Verbose, Debug<br>ErrorAction, ErrorVariable, WarningAction, WarningVariable<br>OutBuffer, PipelineVariable, and OutVariable. For more information, see<br>about_CommonParameters (https:/go.microsoft.com/fwlink/?LinkID=113216)<br></b></p></td></tr>
 											</table>
 											</div>
