--- a/commands/Set-VPASAuditSafeTest.html
+++ b/commands/Set-VPASAuditSafeTest.html
@@ -424,7 +424,7 @@
 											<br>
 											<h1 style="text-align: left;">Syntax:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>Set-VPASAuditSafeTest [[-SafeNamingConvention] &lt;String&gt;] [[-AmtMembers] &lt;Int32&gt;] [[-CPMName] &lt;String&gt;] [[-IgnoreInternalSafes]] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Set-VPASAuditSafeTest [-SafeNamingConvention &lt;String&gt;] [-AmtMembers &lt;Int32&gt;] [-CPMName &lt;String&gt;] [-IgnoreInternalSafes] [&lt;CommonParameters&gt;]</b></p></td></tr>
 											</table>
 											</div>
 											
@@ -433,10 +433,10 @@
 											<br>
 											<h1 style="text-align: left;">Parameters:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-SafeNamingConvention &lt;String&gt;<br>Define which safe to pull for the audit based on a search query<br><br>Required: false<br>Position: 1<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-AmtMembers &lt;Int32&gt;<br>Define how many safe members will be included in the audit<br><br>Required: false<br>Position: 2<br>Default value: 0<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-CPMName &lt;String&gt;<br>Define the correct CPM that should be attached to every safe in the audit<br><br>Required: false<br>Position: 3<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>-IgnoreInternalSafes [&lt;SwitchParameter&gt;]<br>Define if the internal safes should be included in the audit<br>Internal safes such as System, VaultInternal, NotificationEngine, component safes, etc<br><br>Required: false<br>Position: 4<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-SafeNamingConvention &lt;String&gt;<br>Define which safe to pull for the audit based on a search query<br><br>Required: false<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-AmtMembers &lt;Int32&gt;<br>Define how many safe members will be included in the audit<br><br>Required: false<br>Position: named<br>Default value: 0<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-CPMName &lt;String&gt;<br>Define the correct CPM that should be attached to every safe in the audit<br><br>Required: false<br>Position: named<br>Default value: <br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>-IgnoreInternalSafes [&lt;SwitchParameter&gt;]<br>Define if the internal safes should be included in the audit<br>Internal safes such as System, VaultInternal, NotificationEngine, component safes, etc<br><br>Required: false<br>Position: named<br>Default value: False<br>Accept pipeline input: true (ByPropertyName)<br>Accept wildcard characters: false<br></b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>&lt;CommonParameters&gt;<br>This cmdlet supports the common parameters: Verbose, Debug<br>ErrorAction, ErrorVariable, WarningAction, WarningVariable<br>OutBuffer, PipelineVariable, and OutVariable. For more information, see<br>about_CommonParameters (https:/go.microsoft.com/fwlink/?LinkID=113216)<br></b></p></td></tr>
 											</table>
 											</div>
